deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-ingress-svc
  namespace: catalogue
spec:
  selector:
    name: front-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress-nginx
  namespace: catalogue
spec:
  ingressClassName: nginx-internal
  rules:
    - host: front.demo.learn.nrkk.technology
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: front-ingress-svc
                port:
                  number: 80
            path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: front-service
  name: front-service
  namespace: catalogue
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: front-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: front-service
    spec:
      serviceAccountName: front-service
      containers:
      - env:
        - name: NEW_RELIC_APP_NAME
          value: front-service
        - name: NEW_RELIC_LICENSE_KEY
          valueFrom:
            secretKeyRef:
              key: NEW_RELIC_LICENSE_KEY
              name: front-service-secrets
        - name: NEW_RELIC_DISTRIBUTED_TRACING_ENABLED
          value: "true"
        - name: NEW_RELIC_INFINITE_TRACING_TRACE_OBSERVER_HOST
          value: YOUR_TRACE_OBSERVER_HOST
        - name: NEW_RELIC_CODE_LEVEL_METRICS_ENABLED
          value: "true"
        - name: NEW_RELIC_TRANSACTION_TRACER_EXPLAIN_THRESHOLD
          value: "0.3"
        - name: NEW_RELIC_ENABLE_AUTO_TRANSACTION_NAMING
          value: "false"
        - name: NEW_RELIC_JFR_ENABLED
          value: "true"
        - name: NEW_RELIC_AI_MONITORING_ENABLED
          value: "true"
        - name: QDRANT_HOST
          value: qdrant.qdrant
        - name: JVM_OPTS
          value: "-Dcatalogue.url=http://catalogue-web-svc -Dpayment.url=http://payment -Dspring.datasource.url=jdbc:mysql://front-db:3306/db -Dspring.datasource.username=frontservice -Dspring.datasource.password=frontservice_password -Dnewrelic.config.ai_monitoring.enabled=true -Dnewrelic.config.custom_insights_events.max_samples_stored=100000 -Dnewrelic.config.span_events.max_samples_stored=10000"
        - name: RAILS_LOG_TO_STDOUT
          value: "true"
        - name: RAILS_MAX_THREADS
          value: "2"
        image: public.ecr.aws/g7c8o4c7/front-service:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 100
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 600
        name: front-service
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 600
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 1Gi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - all
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
